@@ -486,7 +486,12 @@
 		[self serverReportedInvalidPassword];
 		shouldAttemptReconnect = AIReconnectImmediately;
 	}
- 
+#ifdef HAVE_CDSA
+	else if (purple_account_get_bool([self purpleAccount],PURPLE_SSL_CDSA_BUGGY_TLS_WORKAROUND,false)) {
+		AILog(@"%@: Reconnecting immediately to try to work around buggy TLS stacks",self);
+		shouldAttemptReconnect = AIReconnectImmediately;
+	}
+#endif
 	return shouldAttemptReconnect;
 }
 
